crates/lingui_macro/tests/snapshots/labeled_expressions__js_explicit_labels_in_tpl_literal.snap
---
source: crates/lingui_macro/tests/labeled_expressions.rs
---
import { t } from "@lingui/core/macro";

t`Refresh ${{foo}} inbox`
t`Refresh ${{foo: foo.bar}} inbox`
t`Refresh ${{foo: expr()}} inbox`
t`Refresh ${{}} inbox`
t`Refresh ${{...spread}} inbox`

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
$_i18n._(/*i18n*/ {
    id: "rtxU8c",
    message: "Refresh {foo} inbox",
    values: {
        foo: foo
    }
});
$_i18n._(/*i18n*/ {
    id: "rtxU8c",
    message: "Refresh {foo} inbox",
    values: {
        foo: foo.bar
    }
});
$_i18n._(/*i18n*/ {
    id: "rtxU8c",
    message: "Refresh {foo} inbox",
    values: {
        foo: expr()
    }
});
$_i18n._(/*i18n*/ {
    id: "AmeQ8b",
    message: "Refresh {0} inbox",
    values: {
        0: {}
    }
});
$_i18n._(/*i18n*/ {
    id: "AmeQ8b",
    message: "Refresh {0} inbox",
    values: {
        0: {
            ...spread
        }
    }
});
