crates/lingui_macro/tests/snapshots/labeled_expressions__jsx_icu_with_labeled_expression_as_value_with_ph.snap
---
source: crates/lingui_macro/tests/labeled_expressions.rs
---
import { Plural } from '@lingui/react/macro';
        import { ph } from '@lingui/core/macro';
        <Plural
          value={ph({count: getCount()})}
          one={"oneText"}
          other={<a href="/more">A lot of them</a>}
        />

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
<Trans_ {.../*i18n*/ {
    id: "blU5AK",
    values: {
        count: getCount()
    },
    components: {
        0: <a href="/more"/>
    },
    message: "{count, plural, one {oneText} other {<0>A lot of them</0>}}"
}}/>;
