crates/lingui_macro/tests/snapshots/labeled_expressions__jsx_nested_labels.snap
---
source: crates/lingui_macro/tests/labeled_expressions.rs
---
import { Trans, ph } from "@lingui/react/macro";

<Trans>Refresh <span>{{foo}}</span> inbox</Trans>;
<Trans>Refresh <span>{ph({foo})}</span> inbox</Trans>;

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
<Trans_ {.../*i18n*/ {
    id: "USNn2Q",
    values: {
        foo: foo
    },
    components: {
        0: <span/>
    },
    message: "Refresh <0>{foo}</0> inbox"
}}/>;
<Trans_ {.../*i18n*/ {
    id: "USNn2Q",
    values: {
        foo: foo
    },
    components: {
        0: <span/>
    },
    message: "Refresh <0>{foo}</0> inbox"
}}/>;
