crates/lingui_macro/tests/snapshots/labeled_expressions__jsx_ph_labels.snap
---
source: crates/lingui_macro/tests/labeled_expressions.rs
---
import { Trans, ph } from "@lingui/react/macro";

<Trans>Refresh {ph({foo})} inbox</Trans>;
<Trans>Refresh {ph({foo: foo.bar})} inbox</Trans>;
<Trans>Refresh {ph({foo: expr()})} inbox</Trans>;
<Trans>Refresh {ph({})} inbox</Trans>;
<Trans>Refresh {ph({...spread})} inbox</Trans>;

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
<Trans_ {.../*i18n*/ {
    id: "rtxU8c",
    values: {
        foo: foo
    },
    message: "Refresh {foo} inbox"
}}/>;
<Trans_ {.../*i18n*/ {
    id: "rtxU8c",
    values: {
        foo: foo.bar
    },
    message: "Refresh {foo} inbox"
}}/>;
<Trans_ {.../*i18n*/ {
    id: "rtxU8c",
    values: {
        foo: expr()
    },
    message: "Refresh {foo} inbox"
}}/>;
<Trans_ {.../*i18n*/ {
    id: "AmeQ8b",
    values: {
        0: {}
    },
    message: "Refresh {0} inbox"
}}/>;
<Trans_ {.../*i18n*/ {
    id: "AmeQ8b",
    values: {
        0: {
            ...spread
        }
    },
    message: "Refresh {0} inbox"
}}/>;
